@@ -1,4 +1,6 @@
   [Michele Simionato]
+  * The filenames generated by disagg_by_src exporter now contains the site ID
+    and not longitude and latitude, consistently with the other exporters
   * Accepted again meanLRs greater than 1 in vulnerability functions of kind LN
   * Fixed a bug in event based with correlation and a filtered site collection
   * Fixed the CSV exporter for the realizations in the case of scenarios
